--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
 
     /* Type Checking */
     "strict": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "exactOptionalPropertyTypes": true /* Interpret optional property types as written, rather than adding 'undefined'. */,
